[workspace]

members = [
   "common/api",
   "common/logger",
   "collector/common",
   "collector/jmespath",
   "collector/json",
   "collector/snmptrapd",
   "engine/matcher",
   "executor/common",
   "executor/archive",
   "executor/logger",
   "executor/script",
   "network/common",
   "network/simple",
   "spike/icinga2_api",
   "spike/jmespath",
   "spike/rsyslog_collector",
   "spike/rsyslog_collector_writer",
   "spike/snmptrapd_collector_writer",
   "spike/stdin",
   "spike/tokio",
   "spike/uds_writer_collector",
   "spike/webhook",
   "tornado/common",
   "tornado/tornado",
   "tornado/rsyslog_collector",
   "tornado/webhook_collector"
]

# Link-time optimization (LTO) is a feature that lets the optimizer run on the entire program at once
# (including all its external crates), instead of just one crate at a time. This can produce better-optimized code
# However, it can take a very long time and use a huge amount of memory during compilation, so it is disabled by default.
[profile.release]
lto = true

# To perform a CPU specific build, launch cargo with RUSTFLAGS='-C target-cpu=native'
# E.g.:
# > RUSTFLAGS='-C target-cpu=native' cargo bench
[profile.bench]
debug = true
# When lto is enabled the profiler results are less clear.
# It should be taken into account a performance penalty of at least the 15% without the lto.
#lto = true