[package]
name = "tornado-input-validation"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.70"
regex-syntax = { workspace = true }
tornado_common_parser = { path = "../common/parser"}

