[package]
name = "wasm-regex"
version = "0.1.0"
authors = ["Jonathan Troyer <jonathantroyer@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.70"
regex-syntax = "0.7"