[package]
name = "tornado_collector_email"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
base64 = "0.13"
log = "0.4"
mailparse = "0.13.0"
tornado_collector_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
serde_json = "1.0"
