[package]
name = "tornado_collector_email"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
base64 = "0.21"
log.workspace = true
mailparse = "0.13"
serde_json.workspace = true
tornado_collector_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
