[package]
name = "tornado_collector_jmespath"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
log.workspace = true
jmespath = "0.3.0"
serde.workspace = true
serde_json.workspace = true
tornado_collector_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
