[package]
name = "tornado_common_api"
version = "0.0.1"
authors = [
    "Benjamin Groeber <Benjamin.Groeber@wuerth-phoenix.com>",
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
num-cmp = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
