[package]
name = "tornado_common_api"
version = "0.0.1"
authors = [
    "Benjamin Groeber <Benjamin.Groeber@wuerth-phoenix.com>",
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
num-cmp = "0.1"
uuid = { version = "1.3", default-features = false, features = ["v4"] }
tornado_common_logger = { path = "../logger", version = "0.0.1" }

chrono.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true


[dev-dependencies]
