[package]
name = "tornado_common_api"
version = "0.0.1"
authors = [
    "Benjamin Groeber <Benjamin.Groeber@wuerth-phoenix.com>",
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
num-cmp = "0.1"
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
uuid = { version = "1.3", default-features = false, features = ["v4"] }
opentelemetry = "0.16"
tornado_common_logger = { path = "../logger", version = "0.0.1" }
tornado_common_types = { path = "../types" }
tracing = "0.1"
tracing-opentelemetry = "0.16"

[dev-dependencies]
