[package]
name = "tornado_common_logger"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
arc-swap = "1"
base64.workspace = true
chrono.workspace = true
log.workspace = true
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.8"
opentelemetry-otlp = { version = "0.9", features = ["tonic", "tls", "tls-roots"] }
# reqwest features required to enable system level certificates to be used by tracing-elastic-apm
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"]}
serde.workspace = true
serde_json.workspace = true
sys-info = "0.9"
thiserror.workspace = true
tonic = "0.5"
tracing.workspace = true
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "tracing-log"] }
tracing-opentelemetry = "0.16"

[dev-dependencies]
rand = "0.8"
serial_test = "0.5"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tornado_common_api = { path = "../api", version = "0.0.1" }

