[package]
name = "tornado_common_metrics"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
opentelemetry-prometheus = "0.9"
prometheus = "0.12"

opentelemetry.workspace = true
actix-web = { workspace = true, optional = true }
log.workspace = true

[dev-dependencies]
actix-rt = "2.2"
rand = "0.8"
tokio.workspace = true

[features]
default = []

actix_web = ["actix-web"]
