[package]
name = "tornado_common_metrics"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.9", optional = true }
log.workspace = true
opentelemetry.workspace = true
opentelemetry-prometheus = "0.9"
prometheus = "0.12"

[dev-dependencies]
actix-rt = "2.2"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []

actix_web = ["actix-web"]
