[package]
name = "tornado_common_parser"
version = "0.0.1"
authors = ["Francesco Cina <mr.francesco.cina@gmail.com>"]
edition = "2018"


[dependencies]
tornado_common_types = { path = "../types" }
lazy_static = "1.4"
regex = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"

[dev-dependencies]
