[package]
name = "tornado_common_parser"
version = "0.0.1"
authors = ["Francesco Cina <mr.francesco.cina@gmail.com>"]
edition = "2018"


[dependencies]
lazy_static.workspace = true
regex = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

tornado_common_types = { path = "../types" }

[dev-dependencies]
