[package]
name = "tornado_executor_archive"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
log = "0.4"
regex = "1.3"
lru_time_cache = "0.10.0"
parking_lot = "0.11.0"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
tempfile = "3"