[package]
name = "tornado_executor_archive"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait = "0.1"
log = "0.4"
regex = "1.5"
lru_time_cache = "0.11"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-util", "fs"] }
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }