[package]
name = "tornado_executor_archive"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait = "0.1"
log.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
regex = { workspace = true }
lru_time_cache = "0.11"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
tempfile = "3"
tokio.workspace = true