[package]
name = "tornado_executor_common"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait = "0.1"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
tornado_common_api = { path = "../../common/api", version = "0.0.1" }