[package]
name = "tornado_executor_director"
version = "0.0.1"
authors = [
    "Damiano Chini <damiano.chini@wuerth-phoenix.com>"
]
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
log = "0.4"
reqwest = { version="0.9", default-features = false, features=["rustls-tls"]}
serde = { version = "1.0", features = ['derive'] }
serde_json = { version = "1.0" }
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
actix = "0.10"
actix-web = "3"
maplit = "1.0"
httpmock = "0.4"