[package]
name = "tornado_executor_director"
version = "0.0.1"
authors = [
    "Damiano Chini <damiano.chini@wuerth-phoenix.com>"
]
edition = "2018"

[dependencies]
async-trait.workspace = true
base64.workspace = true
log.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.16"
maplit = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"]}
serde.workspace = true
serde_json.workspace = true
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
actix-rt = "2.2"
actix-web.workspace = true
httpmock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }