[package]
name = "tornado_executor_elasticsearch"
version = "0.0.1"
authors = ["Damiano Chini <damiano.chini@wuerth-phoenix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
log = "0.4"
percent-encoding = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["fs"] }
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }