[package]
name = "tornado_executor_elasticsearch"
version = "0.0.1"
authors = ["Damiano Chini <damiano.chini@wuerth-phoenix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"]}
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_common = { path = "../../tornado/common", version = "0.0.1" }

async-trait.workspace = true
log.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true