[package]
name = "tornado_executor_foreach"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait = "0.1"
log = "0.4"
tracing = "0.1"
tracing-opentelemetry = "0.16"
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_common_parser = { path = "../../common/parser", version = "0.0.1" }
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_network_common = { path = "../../network/common", version = "0.0.1" }
tornado_common = { path = "../../tornado/common", version = "0.0.1" }


[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tornado_network_simple = { path = "../../network/simple", version = "0.0.1" }
