[package]
name = "tornado_executor_foreach"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait.workspace = true
log.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true

tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_common_parser = { path = "../../common/parser", version = "0.0.1" }
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_network_common = { path = "../../network/common", version = "0.0.1" }
tornado_common = { path = "../../tornado/common", version = "0.0.1" }


[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

tornado_network_simple = { path = "../../network/simple", version = "0.0.1" }
