[package]
name = "tornado_executor_icinga2_satellite"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>",
    "William Calliari <william.calliari@wuerth-phoenix.com>"
]
edition = "2018"

[dependencies]
log = "0.4"
tokio = "1.11"
base64 = "0.13"
maplit = "1.0"
serde_json = "1"
async-trait = "0.1"
tokio-rustls = "0.22"
serde = { version = "1.0", features = ['derive'] }
either = { version = "1.6", features = [ 'serde' ] }
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_common_netstring = {path = "../../common/netstring", version = "0.0.1"}

[dev-dependencies]
httpmock = "0.5"
actix-rt = "2.2"
actix-web = "4.0.0-beta.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }