[package]
name = "tornado_executor_icinga2"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
log.workspace = true
maplit = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"]}
serde.workspace = true
serde_json.workspace = true
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tracing = "0.1"

[dev-dependencies]
actix-rt = "2.2"
actix-web = "4.0.0-beta.9"
httpmock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }