[package]
name = "tornado_executor_icinga2"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait.workspace = true
base64.workspace = true
log.workspace = true
maplit.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
actix-rt = "2.2"
httpmock = "0.6"

actix-web.workspace = true
tokio.workspace = true