[package]
name = "tornado_executor_monitoring"
version = "0.0.1"
authors = [
    "Damiano Chini <damiano.chini@wuerth-phoenix.com>"
]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ['derive'] }
serde_json = { version = "1.0" }
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
maplit = "1.0"