[package]
name = "tornado_executor_monitoring"
version = "0.0.1"
authors = [
    "Damiano Chini <damiano.chini@wuerth-phoenix.com>"
]
edition = "2018"

[dependencies]
async-trait = "0.1"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_executor_icinga2 = { path = "../icinga2", version = "0.0.1" }
tornado_executor_director = { path = "../director", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tracing = "0.1"

[dev-dependencies]
maplit = "1.0"
httpmock = "0.6"
tokio.workspace = true