[package]
name = "tornado_executor_script"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait.workspace = true
log.workspace = true
tokio.workspace = true
tracing.workspace = true

tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }


[dev-dependencies]
tempfile = "3"
tokio.workspace = true